@@ -2,7 +2,7 @@ module God
   class Process
     WRITES_PID = [:start, :restart]
     
-    attr_accessor :name, :uid, :gid, :log, :log_cmd, :start, :stop, :restart, :unix_socket, :chroot, :env
+    attr_accessor :name, :uid, :gid, :log, :log_cmd, :start, :stop, :restart, :unix_socket, :chroot, :env, :dir
     
     def initialize
       self.log = '/dev/null'
@@ -69,6 +69,17 @@ module God
         rescue ArgumentError
           valid = false
           applog(self, :error, "GID for '#{self.gid}' does not exist")
+        end
+      end
+      
+      # dir must exist and be a directory if specified
+      if self.dir
+        if !File.exist?(self.dir)
+          valid = false
+          applog(self, :error, "Specified directory '#{self.dir}' does not exist")
+        elsif !File.directory?(self.dir)
+          valid = false
+          applog(self, :error, "Specified directory '#{self.dir}' is not a directory")
         end
       end
       
@@ -275,7 +286,8 @@ module God
         ::Process.groups = [gid_num] if self.gid
         ::Process::Sys.setgid(gid_num) if self.gid
         ::Process::Sys.setuid(uid_num) if self.uid
-        Dir.chdir "/"
+        self.dir ||= '/'
+        Dir.chdir self.dir
         $0 = command
         STDIN.reopen "/dev/null"
         if self.log_cmd
